Changelog:

6.29.13
Updated TwoTouch:
	Now locked mode will have a prediction trail that reflects the path of the ball when kicked

6.28.13
Updated kicking mechanic to not be as crazy, reduced magnitude of kick, both velocity factor and kick factor
Updated TwoTouch:
	Slower movement when activating zone
	Added boolean flag lockCooldown to implement kicking the ball away from TwoTouch

Updated Ball:
	Added setPlayers to allow ball keeping track of players
	Updated clearLock to allow for knocking ball away from TwoTouch

6.21.13
Added updateCounters() method to make code marginally neater
Added visual for direction being held on right stick
Modified PlayerCharge to be a delayed kick special
	Short dash activates on release
	While holding down shortdash, can directly modify gust velocity
	Added visual indication of gust velocity

6.19.13
More sounds added, attendant bugfixes
PlayerCharge now has short dash
PlayerCharge now has ghostly afterimage to kick the ball after a dash, can control direction with short dash

6.18.13
Added lots of sounds for new Players, attendant bugfixes

6.17.13
Continued PlayerEnforcer functionality and visuals
Added stunning to Player
Fixed Player.render() methods to stop using getters

6.13.13
Updated PlayerTwoTouch catching the ball to be smoother
Added PlayerEnforcer

6.12.13
Added recoil to PlayerCharge
Added dash chaining to PlayerCharge (Still needs testing)
Fixed Dash Trail being drawn incorrectly (pos was erroneously being cast as int in updatePos())
Adding speedUp() and slowDown() to ball, to allow accelerating the velMag
	Ball now accelerates into PlayerCharge's gust
	Ball now decelerates into PlayerTwoTouch's 'lock' (Scaled by velocity so game modes with faster balls don't push him ridiculously far. Maybe they should)
Locking is now a property of the ball: The ball can be kicked/gusted out of a PlayerTwoTouch's lock

6.11.13
Added graphical effect for PlayerCharge